# xq-proof-lab

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
configs/: match_suite.example.json  perft_corpus.example.json  pikafish_balanced_shorttc_perft.json  pikafish_balanced_shorttc_suite.json  pikafish_baseline.json  pikafish_match_suite.example.json  pikafish_perft_corpus.example.json  pikafish_proof_store_batch.example.json  pikafish_tactical_perft_corpus.example.json  pikafish_tactical_proof_suite.example.json  proof_batch.example.json  proof_qualification_development_20260713.json  proof_qualification_development_preflight_20260713.json  proof_qualification_development_proven_20260713.json  proof_qualification_development_proven_compact_20260713.json  proof_qualification_development_proven_compact_preflight_20260713.json  proof_qualification_development_proven_expanded_20260713.json  proof_qualification_development_proven_expanded_hashed_20260713.json  proof_qualification_development_proven_expanded_preflight_20260713.json  proof_qualification_development_proven_preflight_20260713.json  proof_qualification_sources_20260713.json  proof_worker.example.json  rule_adjudication_corpus.example.json  rule_chase_gap.example.json  rule_corpus.example.json
docs/: ARCHITECTURE.md  FILE_MANIFEST.md  GOALS.md  MAINTENANCE.md  MINIMAL_STATIC_CLOSURE.md  PIKAFISH_COMPATIBILITY.md  PROJECT_STATUS.md  ROADMAP.md  RULES.md  THIRD_PARTY_AND_EVIDENCE.md
(+102 files in other folders)
