[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xq-proof-lab"
version = "1.0.0"
description = "A local Xiangqi rules, proof, certificate, store, and UCI analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "XQ Proof Lab contributors"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment :: Board Games",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
